--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,5 +23,14 @@ jobs:
     - name: Execute Test
       run: mvn clean test -Dsuite=suite -X
       working-directory: Restassured/
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.6.2
+      with:
+        path: Restassured/logs
+        
+          
+        
+      
+    
 
       
