--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,11 +22,12 @@ jobs:
         cache: maven
     - name: Execute Test
       run: mvn clean test -Dsuite=suite -X
+            mkdir -p logs
       working-directory: Restassured/
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.6.2
       with:
-        name: logs
+        name: demorestlogs
         path: Restassured/logs
         
           
