--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Execute Test
-      run: mvn clean test -Dsuite=suite -X
+      run: |
+            mvn clean test -Dsuite=suite -X
             mkdir -p logs
       working-directory: Restassured/
     - name: Upload a Build Artifact
