--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,6 +11,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      checks: write
+      issues: write
 
     steps:
     - uses: actions/checkout@v4
@@ -27,10 +31,20 @@ jobs:
             
       working-directory: Restassured/
     - name: Upload a Build Artifact
+      if: always()
       uses: actions/upload-artifact@v4.6.2
       with:
         name: demorestlogs
         path: Restassured/logs
+
+    - name: Publish Test Report
+      if: always()
+      uses: dorny/test-reporter@v1
+      with:
+        name: TestNG Results
+        path: target/surefire-reports/junitreports/TEST-*.xml
+        reporter: java-junit
+
         
           
         
